--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
       <!-- Hamburger (mobile) -->
       <button class="navbar-toggler" type="button" aria-label="Toggle mobile navigation"
         data-bs-toggle="offcanvas" data-bs-target="#mobileNav" aria-controls="mobileNav">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon">
+          <span></span>
+        </span>
       </button>
 
 
@@ -58,7 +60,7 @@
     <!-- Offcanvas Nav for Mobile -->
     <div class="offcanvas offcanvas-end" tabindex="-1" id="mobileNav">
       <div class="offcanvas-header">
-        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close menu">
+        <button type="button" class="btn-close text-reset navbar-toggler" data-bs-dismiss="offcanvas" aria-label="Close menu">
           <span class="navbar-toggler-icon">
             <span></span>
           </span>
