--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <section class="hero-wrapper position-relative primary-radius">
       <div class="hero-content container text-white text-center d-flex flex-column justify-content-center align-items-center">
-        <h1 class="" data-aos="fade-up" data-aos-delay="0">
+        <h1 class="hero-intro" data-aos="fade-up" data-aos-delay="0">
           We’re Glad You’re Here
         </h1>
         <p class="lead mb-4" data-aos="fade-up" data-aos-delay="200">
