--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="container-fluid d-flex justify-content-between align-items-center">
       <!-- Logo -->
       <a class="navbar-brand d-flex align-items-center" href="#" aria-label="Return to Rock Solid Church homepage">
-        <img src="assets/img/rock-solid-logo-light.png" alt="Rock Solid Logo">
+        <img src="assets/img/rock-solid-logo-light.png" alt="Rock Solid Christian Church Logo Light Colored">
         <div>
           <div>ROCK SOLID<br><small>Christian Church</small></div>
         </div>
@@ -144,7 +144,7 @@
 
         <!-- Full-width Image -->
         <div class="text-center">
-          <img src="assets/img/jesus-holding-the-cross.png" alt="Artistic depiction of Jesus carrying the cross" class="img-fluid rounded-4 shadow-sm">
+          <img src="assets/img/jesus-holding-the-cross.jpg" alt="Artistic depiction of Jesus carrying the cross" class="img-fluid rounded-4 shadow-sm">
         </div>
       </div>
     </section>
@@ -179,7 +179,7 @@
           </div>
           <div class="col-lg-4">
             <div class="mission-card">
-              <img src="assets/img/pin-icon.png" class="mt-2 mb-5" alt="Pin Icon"/>
+              <img src="assets/img/pin-icon.png" class="mt-2 mb-5" alt="Location Pin Icon"/>
               <h5>Find a Location</h5>
               <p>Easily find a campus near you. Join us in person and get connected.</p>
               <a href="#">Search Our Campuses</a>
@@ -187,7 +187,7 @@
           </div>
           <div class="col-lg-4">
             <div class="mission-card">
-              <img src="assets/img/plane-icon.png" class="mt-2 mb-5" alt="Plane Icon"/>
+              <img src="assets/img/plane-icon.png" class="mt-2 mb-5" alt="Get Connected Plane Icon"/>
               <h5>Get Connected</h5>
               <p>Stay connected and in the loop—sign up for updates, events, and ways to get involved.</p>
               <a href="#">Contact Us</a>
@@ -234,7 +234,7 @@
           </div>
         </div>
       </div>
-      <img src="assets/img/heart-handshake.png" class="mt-5" alt="Love and Hope Icon"/>
+      <img src="assets/img/heart-handshake.png" class="mt-5" alt="Love and Hope Icon consisiting of two hands shaking forming a heart"/>
     </section>
 
     <section id="volunteer">
@@ -249,64 +249,64 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <a href="#" class="d-block text-decoration-none" role="link" aria-label="Learn more about Small Groups">
-                <div class="img-holder"><img src="assets/img/volunteer/small-groups.jpg" alt="Small Groups"></div>
+                <div class="img-holder"><img src="assets/img/volunteer/small-groups.jpg" alt="Group of people sitting around a dinner table having a conversation with a square chandelier above"></div>
                 <p>Small Groups</p>
               </a>
             </div>
             
             <div class="swiper-slide">
               <a href="#" class="d-block text-decoration-none" role="link" aria-label="Learn more about Prayer & Care ministry">
-                <div class="img-holder"><img src="assets/img/volunteer/prayer-and-care.jpg" alt="Prayer & Care"></div>
+                <div class="img-holder"><img src="assets/img/volunteer/prayer-and-care.jpg" alt="Two people, a man and a woman, among a crowd of many holding lit candles and praying"></div>
                 <p>Prayer & Care</p>
               </a>
             </div>
 
             <div class="swiper-slide">
               <a href="#" class="d-block text-decoration-none" role="link" aria-label="Learn more about Kids ministry">
-                <div class="img-holder"><img src="assets/img/volunteer/kids.jpg" alt="Kids Ministry"></div>
+                <div class="img-holder"><img src="assets/img/volunteer/kids.jpg" alt="A little girl smiling and playing with her backpack straps"></div>
                 <p>Kids</p>
               </a>
             </div>
 
             <div class="swiper-slide">
               <a href="#" class="d-block text-decoration-none" role="link" aria-label="Learn more about Students ministry">
-                <div class="img-holder"><img src="assets/img/volunteer/students.jpg" alt="Students Ministry"></div>
+                <div class="img-holder"><img src="assets/img/volunteer/students.jpg" alt="Two people sitting at a cafe table with a drink smiling mid conversation"></div>
                 <p>Students</p>
               </a>
             </div>
 
             <div class="swiper-slide">
               <a href="#" class="d-block text-decoration-none" role="link" aria-label="Learn more about Worship ministry">
-                <div class="img-holder"><img src="assets/img/volunteer/worship2.jpg" alt="Worship Ministry"></div>
+                <div class="img-holder"><img src="assets/img/volunteer/worship2.jpg" alt="A picture of a woman holding a mic singing"></div>
                 <p>Worship</p>
               </a>
             </div>
 
             <div class="swiper-slide">
               <a href="#" class="d-block text-decoration-none" role="link" aria-label="Learn more about Men ministry">
-                <div class="img-holder"><img src="assets/img/volunteer/men.jpg" alt="Men's Ministry"></div>
+                <div class="img-holder"><img src="assets/img/volunteer/men.jpg" alt="A group of men out in public talking and laughing and holding a drink"></div>
                 <p>Men</p>
               </a>
             </div>
 
             <div class="swiper-slide">
               <a href="#" class="d-block text-decoration-none" role="link" aria-label="Learn more about Women ministry">
-                <div class="img-holder"><img src="assets/img/volunteer/women.jpg" alt="Women's Ministry"></div>
+                <div class="img-holder"><img src="assets/img/volunteer/women.jpg" alt="Two women among a group holding mugs and smiling and laughing"></div>
                 <p>Women</p>
               </a>
             </div>
 
             <div class="swiper-slide">
               <a href="#" class="d-block text-decoration-none" role="link" aria-label="Learn more about Small Groups">
-                <div class="img-holder"><img src="assets/img/volunteer/students.jpg" alt="Students"></div>
-                <p>Students</p>
+                <div class="img-holder"><img src="assets/img/volunteer/students.jpg" alt="Two people sitting at a cafe table with a drink smiling mid conversation"></div>
+                <p>Students 2</p>
               </a>
             </div>
 
             <div class="swiper-slide">
               <a href="#" class="d-block text-decoration-none" role="link" aria-label="Learn more about Small Groups">
-                <div class="img-holder"><img src="assets/img/volunteer/small-groups.jpg" alt="Small Groups"></div>
-                <p>Small Groups</p>
+                <div class="img-holder"><img src="assets/img/volunteer/small-groups.jpg" alt="Group of people sitting around a dinner table having a conversation with a square chandelier above"></div>
+                <p>Small Groups 2</p>
               </a>
             </div>
           </div>
@@ -333,7 +333,7 @@
               <!-- Primary Story -->
               <article class="flex-fill" data-aos="fade-up" data-aos-delay="150">
                 <a href="#" class="d-block text-decoration-none text-white">
-                  <div class="img-holder"><img src="assets/img/stories/joshua.jpg" alt="Joshua's Road to Peace"></div>
+                  <div class="img-holder"><img src="assets/img/stories/joshua.jpg" alt="A man and woman sitting at a table mid conversation, her back is to us and he is smiling and making a hand gesture"></div>
                   <p>Joshua’s Road to Peace</p>
                 </a>
               </article>
@@ -342,13 +342,13 @@
               <div class="d-flex flex-column gap-3" style="min-width: 160px;">
                 <article data-aos="fade-up" data-aos-delay="150">
                   <a href="#" class="d-block text-decoration-none text-white">
-                    <div class="img-holder"><img src="assets/img/stories/by-any-means.jpg" alt="By Any Means Necessary"></div>
+                    <div class="img-holder"><img src="assets/img/stories/by-any-means.jpg" alt="A photo of a woman with mid length dirty blonde hair looking into the camera"></div>
                     <p>By Any Means Necessary</p>
                   </a>
                 </article>
                 <article data-aos="fade-up" data-aos-delay="150">
                   <a href="#" class="d-block text-decoration-none text-white">
-                    <div class="img-holder"><img src="assets/img/stories/holding-on-to-hope.jpg" alt="Holding on to Hope"></div>
+                    <div class="img-holder"><img src="assets/img/stories/holding-on-to-hope.jpg" alt="A photo of a woman and a man sitting at a cafe table talking, his back is to us and she is speaking and making a hand gesture"></div>
                     <p class="mb-0">Holding on to Hope</p>
                   </a>
                 </article>
