--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Rock Solid Christian Church is a diverse, Spirit-led community committed to disciple-making, authentic worship, and holding out love and hope to the world. Plan a visit, connect, and grow with us.">
   <title>Rock Solid Christian Church</title>
   <link rel="icon" href="assets/img/favicon.png" type="image/png">
