--- a/index.html
+++ b/index.html
@@ -386,14 +386,14 @@
             <a href="tel:+10000000000" class="text-decoration-none">(000) 000-0000</a>
           </address>
 
-          <div class="d-flex mb-4">
+          <!-- <div class="d-flex mb-4">
               <a href="" class="btn btn-youtube rounded-circle"><i class="fa fab fa-youtube" target="_blank"></i></a>
               <a href="" class="btn btn-youtube rounded-circle"><i class="fa fab fa-twitter" target="_blank"></i></a>
               <a href="" class="btn btn-instagram rounded-circle"><i class="fa fab fa-instagram" target="_blank"></i></a>
               <a href="#" class="btn btn-facebook rounded-circle" aria-label="Visit our Facebook page">
                 <i class="fa fab fa-facebook"></i>
               </a>
-          </div>
+          </div> -->
         </div>
 
         <!-- Right nav columns -->
