--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           <div class="col-lg-4">
             <div class="mission-card">
               <img src="assets/img/play-icon.png" class="mt-2 mb-5" alt="Play Icon"/>
-              <h5>Watch a Message</h5>
+              <h3>Watch a Message</h3>
               <p>Catch up on the latest and past weekend service messages anytime, anywhere.</p>
               <a href="#">Catch Our Latest Message</a>
             </div>
@@ -180,7 +180,7 @@
           <div class="col-lg-4">
             <div class="mission-card">
               <img src="assets/img/pin-icon.png" class="mt-2 mb-5" alt="Location Pin Icon"/>
-              <h5>Find a Location</h5>
+              <h3>Find a Location</h3>
               <p>Easily find a campus near you. Join us in person and get connected.</p>
               <a href="#">Search Our Campuses</a>
             </div>
@@ -188,7 +188,7 @@
           <div class="col-lg-4">
             <div class="mission-card">
               <img src="assets/img/plane-icon.png" class="mt-2 mb-5" alt="Get Connected Plane Icon"/>
-              <h5>Get Connected</h5>
+              <h3>Get Connected</h3>
               <p>Stay connected and in the loop—sign up for updates, events, and ways to get involved.</p>
               <a href="#">Contact Us</a>
             </div>
@@ -400,7 +400,7 @@
         <div class="col col-md-6 col-xl-4 offset-xl-2">
           <div class="row">
             <div class="col-6">
-              <h6 class="text-uppercase">Quick Links</h6>
+              <div class="footer-links-heading text-uppercase">Quick Links</div>
               <ul class="list-unstyled small">
                 <li><a href="#" class="text-decoration-none">About Rock Solid</a></li>
                 <li><a href="#" class="text-decoration-none">Locations</a></li>
@@ -411,7 +411,7 @@
               </ul>
             </div>
             <div class="col-6">
-              <h6 class="text-uppercase">Get in Touch</h6>
+              <div class="footer-links-heading text-uppercase">Get in Touch</div>
               <ul class="list-unstyled small">
                 <li><a href="#" class="text-decoration-none">Plan a Visit Request</a></li>
                 <li><a href="#" class="text-decoration-none">Prayer</a></li>
