--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
         <!-- Right nav columns -->
         <div class="col col-md-6 col-xl-4 offset-xl-2">
           <div class="row">
-            <div class="col-6">
+            <div class="col-12 col-md-6">
               <div class="footer-links-heading text-uppercase">Quick Links</div>
               <ul class="list-unstyled small">
                 <li><a href="#" class="text-decoration-none">About Rock Solid</a></li>
@@ -410,7 +410,7 @@
                 <li><a href="#" class="text-decoration-none">Serving</a></li>
               </ul>
             </div>
-            <div class="col-6">
+            <div class="col-12 col-md-6">
               <div class="footer-links-heading text-uppercase">Get in Touch</div>
               <ul class="list-unstyled small">
                 <li><a href="#" class="text-decoration-none">Plan a Visit Request</a></li>
